--- a/css/layout.css
+++ b/css/layout.css
@@ -1,22 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 /*Variables */
 :root{
---primarycolor: #fefefe;
+--primarycolor: #E54D26;
 --secondarycolor: #3498db;
 --tertiarycolor:  #2c3e50;
 --primaryoff:  #dcdde1;
 --purewhite: #fff;
 --pureblack: #000;
+--black40: #E8E8E8;
 --whitecolor: #fefefe;
---blackcolor: #202020;
+--blackcolor: #070717;
+--color-text: #494949;
+--color-heading: #070717; 
 --colorgreen: #76b852;
 --acentcolor: #ffeb3b;
 --colorblue: #0066cb;
 --colorred: #eb062c;
---sectionpadding: 60px
+--sectionpadding: 60px;
+--font-family-heading: "Libre Franklin", sans-serif;
+--font-family-primary: "Archivo", sans-serif;
 }
 /* Rest */
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family-primary);
 }
 img {
     max-width: 100%;
@@ -24,7 +30,7 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family-heading);
 }
 a:hover {
     text-decoration: none;
@@ -62,12 +68,11 @@ a:hover {
     color: var(--colorblue);
 }
 .color-white {
-    color: #fff !important;
+    color: #fff;
 }
 .color-green {
     color: var(--colorgreen);
 }
-
 .bg-green {
     background-color: var(--colorgreen) !important;
 }
@@ -171,6 +176,31 @@ a:hover {
 .pb-100 {
     padding-top: 100px;
 }
+.border-radius-4 {
+    border-radius: 4px;
+}
+.border-radius-8 {
+    border-radius: 8px;
+}
+.btn-border {
+    border: 1px solid;
+}
+.btn-border-black-40 {
+    border-color: var(--black40);
+}
+.btn-bgcolor-primary {
+    background: var(--primarycolor);
+}
+.header-btn ul li a:hover {
+    color: var(--blackcolor);
+}
+.header-btn ul li a.btn-border:hover {
+    background: var(--primarycolor);
+    color: var(--purewhite);
+}
+.header-btn ul li a.btn-bgcolor-primary:hover {
+    border: 1px solid var(--black40);
+}
 /* Header */
 .top-header {
     padding: 8px 0;
@@ -215,11 +245,7 @@ a:hover {
     z-index: 1030;
 }
 .btm-header {
-    padding: 15px 0;
-    background: #efefef;
-}
-.btm-header .main-menu {
-    margin-top: 25px; 
+    padding: 12px 0;
 }
 .btm-header .main-menu .navbar {
     margin-bottom: 0px;
@@ -232,9 +258,16 @@ a:hover {
 .navbar-fixed-top {
     border-bottom: 1px solid #ddd;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.12);
+    background: var(--purewhite);
 }
 .navbar-fixed-top .logo {
     width: 60%; 
+}
+.navbar-expand-lg .navbar-collapse {
+    justify-content: center;
+}
+.navbar-nav li a {
+    padding: 8px 12px !important;
 }
 .navbar-fixed-top .top-header-2 {
     display: none; 
@@ -242,6 +275,7 @@ a:hover {
 .navbar-fixed-top .main-menu {
     margin-top: 0;
 }
+
 .banner-wrapper {
     position: relative;
 }
