swiper slider finish

--- a/css/layout.css
+++ b/css/layout.css
@@ -14,6 +14,7 @@
   --color-text: #494949;
   --color-heading: #070717;
   --colorred: #eb062c;
+  --coloryellow: #FFBE3F;
   --sectionpadding: 60px;
   --h1font: 52px;
   --font-family-heading: "Libre Franklin", sans-serif;
@@ -406,6 +407,53 @@ a.btn-bgcolor-primary:hover {
     padding: 0; 
 }
 /* Swiper */
+
+.slider-header-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin-bottom: 20px; 
+}
+
+.controls-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+}
+
+.swiper-pagination {
+    color: #333; 
+    font-size: 16px; 
+    font-weight: bold;
+    position: static !important; 
+    width: auto !important;
+}
+
+.navigation-wrapper {
+    display: flex;
+    gap: 20px; 
+    align-items: center;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+   
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333;            
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 1;
+    position: static !important;
+    margin-top: 0 !important;
+    transform: none !important;
+}
+
+/* Optional: Add hover effect */
 .dwkSwiper .swiper-slide {
     background: var(--lightcolor);
     padding: 20px;
@@ -414,13 +462,50 @@ a.btn-bgcolor-primary:hover {
     text-align: center;
 }
 
+.swiper-pagination-fraction {
+    font-family: var(--font-family-primary);
+    font-size: 20px;
+    line-height: 150%;
+    font-weight: 400;
+
+}
+.slider-header-controls .swiper-button-next:after, .slider-header-controls .swiper-button-prev:after {
+    width: 21px;
+    height: 24px;
+    font-size: 0;
+}
+.slider-header-controls .swiper-button-next:after {
+    background: url(../images/arrow-right.svg);
+    
+}
+.slider-header-controls .swiper-button-prev:after {
+    background: url(../images/arrow-left.svg);
+}
 .dwkSwiper .swiper-slide ul {
     justify-content: center;
 }
+.dwkSwiper .swiper-slide ul li i {
+    font-size: 40px;
+    color: var(--coloryellow);
+    margin-bottom: 20px;
+}
 .dwkSwiper .swiper-slide {
-    
     width: 70%; 
     box-sizing: border-box; 
+}
+.dwkSwiper .swiper-slide .slide-content p {
+    font-size: 20px;
+    color: var(--black80);
+}
+.dwkSwiper .swiper-slide .slide-content span.sippers-name {
+    font-size: 16px;
+    color: var(--blackcolor);
+}
+
+.dwkSwiper .swiper-slide .slide-content span.shippers-desc {
+    font-size: 12px;
+    color: var(--blackcolor);
+    display: block
 }
 /* Footer */
 footer {
