--- a/css/layout.css
+++ b/css/layout.css
@@ -53,7 +53,7 @@ h1 {
 }
 h2 {
   font-size: 48px;
-  font-weight: 700;
+  font-weight: 600;
 }
 h3 {
   font-size: 32px;
@@ -80,6 +80,13 @@ h3 {
 }
 .no-padding-right {
   padding-right: 0;
+}
+
+.no-padding-top {
+    padding-top: 0;
+}
+.no-padding-bottom {
+    padding-bottom: 0;
 }
 .color-primary {
   color: var(--primarycolor);
@@ -108,9 +115,15 @@ h3 {
 .bg-black {
   background-color: var(--blackcolor);
 }
+.bg-white {
+    background-color: var(--purewhite);
+  }
 .bg-green {
   background-color: var(--colorgreen);
 }
+.bg-primary {
+    background-color: var(--primarycolor) !important;
+  }
 .spacer-10 {
   height: 10px;
   width: 100%;
@@ -561,6 +574,29 @@ a.btn-bgcolor-primary:hover {
 }
 .blog-card-wrapper a.btn-blog:hover::after {
   background-image: url(../images/icon-arrow-red.svg);
+}
+/* Home contact section */
+.heading-wrapper p {
+    font-size: 20px;
+    line-height: 150%;
+    padding: 0 16%;
+}
+.section-contact-home .form-wrapper {
+    margin-top: 48px;
+    border-radius: 16px;
+    padding: 24px;
+}
+
+.section-contact-home .form-wrapper a {
+    color: var(--blackcolor);
+}
+
+.section-contact-home .form-wrapper textarea {
+    min-height: 160px;
+    resize: none;
+}
+.section-contact-home .form-wrapper a:hover {
+    color: var(--primarycolor);
 }
 /* Footer */
 footer {
