--- a/css/layout.css
+++ b/css/layout.css
@@ -250,6 +250,10 @@ a.btn-bgcolor-primary:hover {
   border: 1px solid var(--black40);
 }
 /* Header */
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
 .top-header {
   padding: 8px 0;
   background: #e2e2e2;
