--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,7 @@
   --pureblack: #000;
   --black40: #e8e8e8;
   --black80: #636363;
+  --black90: #494949;
   --whitecolor: #fefefe;
   --blackcolor: #141414;
   --color-text: #494949;
@@ -42,6 +43,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-family-heading);
+  color: var(--blackcolor);
 }
 a,
 a:hover {
@@ -83,47 +85,46 @@ h3 {
 }
 
 .no-padding-top {
-    padding-top: 0;
+  padding-top: 0;
 }
 .no-padding-bottom {
-    padding-bottom: 0;
+  padding-bottom: 0;
+}
+
+.color-white {
+  color: var(--purewhite);
+}
+.color-white * {
+  color: var(--purewhite);
 }
 .color-primary {
   color: var(--primarycolor);
 }
 .color-black {
-  color: #000;
+  color: var(--blackcolor);
+}
+.color-black * {
+  color: var(--blackcolor);
 }
 .color-offblack {
   color: #999;
 }
-.color-red {
-  color: var(--colorred);
-}
-.color-blue {
-  color: var(--colorblue);
-}
-.color-white {
-  color: #fff;
-}
-.color-green {
-  color: var(--colorgreen);
-}
 .bg-light {
-  background-color: var(--lightcolor);
+  background-color: var(--lightcolor) !important;
+  color: var(--black90);
 }
 .bg-black {
   background-color: var(--blackcolor);
 }
 .bg-white {
-    background-color: var(--purewhite);
-  }
+  background-color: var(--purewhite);
+}
 .bg-green {
   background-color: var(--colorgreen);
 }
 .bg-primary {
-    background-color: var(--primarycolor) !important;
-  }
+  background-color: var(--primarycolor) !important;
+}
 .spacer-10 {
   height: 10px;
   width: 100%;
@@ -224,6 +225,9 @@ h3 {
 .pb-100 {
   padding-top: 100px;
 }
+.row-mb-3 > div:nth-child(n + 4) {
+  margin-top: 3rem;
+}
 .border-radius-4 {
   border-radius: 4px;
 }
@@ -251,8 +255,8 @@ a.btn-bgcolor-primary:hover {
 }
 /* Header */
 .navbar-toggler:focus {
-    outline: none;
-    box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
 .top-header {
   padding: 8px 0;
@@ -316,7 +320,7 @@ a.btn-bgcolor-primary:hover {
 .navbar-fixed-top .logo {
   width: 60%;
 }
-.navbar-expand-lg .navbar-collapse {
+.navbar-expand-md .navbar-collapse {
   justify-content: center;
 }
 .navbar-nav li a {
@@ -581,26 +585,102 @@ a.btn-bgcolor-primary:hover {
 }
 /* Home contact section */
 .heading-wrapper p {
-    font-size: 20px;
-    line-height: 150%;
-    padding: 0 16%;
+  font-size: 20px;
+  line-height: 150%;
+  padding: 0 16%;
+  margin-bottom: 48px;
 }
 .section-contact-home .form-wrapper {
-    margin-top: 48px;
-    border-radius: 16px;
-    padding: 24px;
+  border-radius: 16px;
+  padding: 24px;
 }
 
 .section-contact-home .form-wrapper a {
-    color: var(--blackcolor);
+  color: var(--blackcolor);
 }
 
 .section-contact-home .form-wrapper textarea {
-    min-height: 160px;
-    resize: none;
+  min-height: 160px;
+  resize: none;
 }
 .section-contact-home .form-wrapper a:hover {
-    color: var(--primarycolor);
+  color: var(--primarycolor);
+}
+/* Pricing section */
+.section-pricing .row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+@media (max-width: 991.98px) {
+  .section-pricing .row {
+    grid-template-columns: 1fr;
+  }
+}
+.pricing-card {
+  background: var(--lightcolor);
+  border-radius: 16px;
+  padding: 40px 32px;
+  gap: 32px;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 !important;
+}
+.pricing-title a {
+    background: var(--blackcolor);
+    color: var(--purewhite);
+    border-radius: 40px;
+    padding: 8px 24px;
+    font-size: 12px;
+}
+.pricing-card  h4 {
+    margin-bottom: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+.pricing-card  h3 {
+    margin-top: 32px;
+    font-weight: 700;
+}
+.pricing-package p {
+    margin-bottom: 0;
+}
+.gradient-divider {
+    height: 1px;
+    margin: 32px 0; 
+    background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0), 
+        rgba(0, 0, 0, 0.1), 
+        rgba(0, 0, 0, 0.2), 
+        rgba(0, 0, 0, 0.1), 
+        rgba(0, 0, 0, 0)
+    );
+    
+    width: 100%;
+}
+.pricing-list ul li {
+    position:  relative;
+    padding-left: 30px;
+}
+.pricing-list ul li::after {
+    content: "";
+    background: url(../images/icon-check.png) no-repeat;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+}
+.pricing-card a.color-white {
+  color: var(--purewhite);
+}
+.pricing-card a.color-white:hover {
+  color: var(--blackcolor);
 }
 /* Footer */
 footer {
