--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,7 +58,7 @@
   }
   ul.dwk-counter li {
     width: 33.33%;
-}
+  }
   .dwk-counter h2 {
     font-size: 30px;
   }
@@ -79,16 +79,35 @@
     gap: 0;
     justify-content: flex-start;
     margin-bottom: 30px;
-}
+  }
+  .section-pricing .row.d-grid,
+  .pricing-list ul.d-grid {
+    grid-template-columns: 1fr;
+  }
+  .pricing-list.d-flex {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start !important;
+  }
+  .section-performance-metrics .dwk-counter {
+    flex-wrap: wrap;
+  }
+  .section-performance-metrics .dwk-counter li {
+    width: 50%;
+  }
   .btm-footer {
     padding-bottom: 100px;
   }
   .copyright {
     text-align: center;
   }
-  .powered {
+  .footer-social {
     text-align: center;
     float: none;
+  }
+  .footer-social ul {
+    justify-content: center;
+    margin-top: 20px;
   }
   .footer-button {
     display: block;
@@ -133,11 +152,23 @@
   .dwk-counter h2 {
     font-size: 28px;
   }
+  .section-pricing .row.d-grid,
+  .pricing-list ul.d-grid {
+    grid-template-columns: 1fr;
+  }
+  .pricing-list.d-flex {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start !important;
+  }
 }
-
+@media (max-width: 1024x) {
+  .pricing-list.d-flex {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
 @media only screen and (min-width: 1024px) and (max-width: 1300px) {
-
 }
 @media only screen and (min-width: 1300px) and (max-width: 2500px) {
-
 }
