--- a/css/responsive.css
+++ b/css/responsive.css
@@ -95,8 +95,18 @@
   .section-performance-metrics .dwk-counter li {
     width: 50%;
   }
+
+  .journey-content {
+    padding:30px 0 0 15px !important;
+  }
   .btm-footer {
     padding-bottom: 100px;
+  }
+  .footer-widget {
+    margin-top: 30px;
+  }
+  .footer-widget h3 {
+    margin-bottom: 20px;
   }
   .copyright {
     text-align: center;
