--- a/css/layout.css
+++ b/css/layout.css
@@ -16,7 +16,7 @@
   --color-heading: #070717;
   --colorred: #eb062c;
   --coloryellow: #ffbe3f;
-  --colorbrown: #AA4930;
+  --colorbrown: #aa4930;
   --sectionpadding: 60px;
   --h1font: 52px;
   --font-family-heading: "Libre Franklin", sans-serif;
@@ -68,6 +68,12 @@ h3 {
 }
 .section-padding-2x {
   padding: calc(var(--sectionpadding) * 2) 0;
+}
+.section-padding-2 {
+  padding: calc(var(--sectionpadding) + 20px) 0;
+}
+.section-padding-4 {
+  padding: calc(var(--sectionpadding) + 40px) 0;
 }
 .section-padding-bottom {
   padding-bottom: var(--sectionpadding);
@@ -412,6 +418,7 @@ a.btn-bgcolor-primary:hover {
 }
 .steps-list li a p {
   color: var(--black80);
+  margin-bottom: 0;
 }
 .step-link {
   display: block;
@@ -434,6 +441,10 @@ a.btn-bgcolor-primary:hover {
 }
 .step-item {
   padding: 0;
+}
+.steps-list-primary .step-link:hover,
+.steps-list-primary .step-link.active-step {
+  background-color: var(--primarycolor);
 }
 /* Swiper */
 
@@ -594,20 +605,23 @@ a.btn-bgcolor-primary:hover {
   padding: 0 16%;
   margin-bottom: 48px;
 }
-.section-contact-home .form-wrapper {
+.form-wrapper {
   border-radius: 16px;
   padding: 24px;
 }
 
-.section-contact-home .form-wrapper a {
+.form-wrapper a {
   color: var(--blackcolor);
 }
 
-.section-contact-home .form-wrapper textarea {
+.form-wrapper textarea {
   min-height: 160px;
   resize: none;
 }
-.section-contact-home .form-wrapper a:hover {
+.form-wrapper input[type="checkbox"] {
+  margin-right: 10px;
+}
+.form-wrapper a:hover {
   color: var(--primarycolor);
 }
 /* Pricing section */
@@ -628,52 +642,51 @@ a.btn-bgcolor-primary:hover {
   margin: 0 !important;
 }
 .pricing-title a {
-    background: var(--blackcolor);
-    color: var(--purewhite);
-    border-radius: 40px;
-    padding: 8px 24px;
-    font-size: 12px;
+  background: var(--blackcolor);
+  color: var(--purewhite);
+  border-radius: 40px;
+  padding: 8px 24px;
+  font-size: 12px;
 }
-.pricing-card  h4 {
-    margin-bottom: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.pricing-card h4 {
+  margin-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.pricing-card  h3 {
-    margin-top: 32px;
-    font-weight: 700;
+.pricing-card h3 {
+  margin-top: 32px;
+  font-weight: 700;
 }
 .pricing-package p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .gradient-divider {
-    height: 1px;
-    margin: 32px 0; 
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0), 
-        rgba(0, 0, 0, 0.1), 
-        rgba(0, 0, 0, 0.2), 
-        rgba(0, 0, 0, 0.1), 
-        rgba(0, 0, 0, 0)
-    );
-    
-    width: 100%;
+  height: 1px;
+  margin: 32px 0;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0)
+  );
+
+  width: 100%;
 }
 .pricing-list ul li {
-    position:  relative;
-    padding-left: 30px;
+  position: relative;
+  padding-left: 30px;
 }
 .pricing-list ul li::after {
-    content: "";
-    background: url(../images/icon-check.png) no-repeat;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    
+  content: "";
+  background: url(../images/icon-check.png) no-repeat;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .pricing-card a.color-white {
   color: var(--purewhite);
@@ -682,109 +695,139 @@ a.btn-bgcolor-primary:hover {
   color: var(--blackcolor);
 }
 .pricing-card-diamond h3 {
-    margin-top: 0;
+  margin-top: 0;
 }
 .pricing-card-diamond h4 {
-    justify-content: flex-start;
-    gap: 12px;
+  justify-content: flex-start;
+  gap: 12px;
 }
 .pricing-card-diamond {
-    border-radius: 16px;
-    padding: 40px 32px;
-    gap: 32px;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 24px !important;
+  border-radius: 16px;
+  padding: 40px 32px;
+  gap: 32px;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 24px !important;
 }
 .pricing-card-diamond .pricing-list ul li::after {
-    background: url(../images/icon-check-white.png) no-repeat;
+  background: url(../images/icon-check-white.png) no-repeat;
 }
 .pricing-list ul.d-grid {
-    grid-template-columns: repeat(2, auto);
-    gap: 16px;
+  grid-template-columns: repeat(2, auto);
+  gap: 16px;
 }
 .pricing-card-diamond .pricing-list ul li {
-    width: auto;
+  width: auto;
 }
-.section-performance-metrics .dwk-counter  li {
-    padding: 0 20px;
+.section-performance-metrics .dwk-counter li {
+  padding: 0 20px;
 }
 /* Partner logos animation */
-  .scrolling-wrapper-container {
-    overflow: hidden;
-    
-    -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
-    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+.scrolling-wrapper-container {
+  overflow: hidden;
+
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scrolling-wrapper {
+  display: flex;
+  gap: 120px;
+  animation: scroll 10s linear infinite;
+  padding: 25px 0;
+}
+
+.logo-item {
+  flex-shrink: 0;
+}
+
+/* Pause the animation on hover */
+.container:hover .scrolling-wrapper {
+  animation-play-state: paused;
+}
+/* The animation that moves the wrapper */
+@keyframes scroll {
+  from {
+    transform: translateX(0);
   }
-  
-  .scrolling-wrapper {
-    display: flex;
-    gap: 120px; 
-    animation: scroll 10s linear infinite;
-    padding: 25px 0;
+  to {
+    transform: translateX(-50%);
   }
-  
-  .logo-item {
-    flex-shrink: 0;
-  }
-  
-  /* Pause the animation on hover */
-  .container:hover .scrolling-wrapper {
-    animation-play-state: paused;
-  }
-  /* The animation that moves the wrapper */
-  @keyframes scroll {
-    from {
-      transform: translateX(0);
-    }
-    to {
-      transform: translateX(-50%);
-    }
-  }
-  
-  /* Faq Accordion */
-  #accordionfaq .accordion-button:focus {
-    outline: none;
-    box-shadow: none;
-  }
-  #accordionfaq .accordion-button {
-    background: url('../images/icon-angle-right-black.png') no-repeat 16px  center var(--purewhite);
-    padding: 16px 18px 16px 32px;
-    font-size: 20px;
-    font-weight: 600;
-  }
+}
+
+/* Faq Accordion */
+#accordionfaq .accordion-button:focus {
+  outline: none;
+  box-shadow: none;
+}
+#accordionfaq .accordion-button {
+  background: url("../images/icon-angle-right-black.png") no-repeat 16px center
+    var(--purewhite);
+  padding: 16px 18px 16px 32px;
+  font-size: 20px;
+  font-weight: 600;
+}
 /* #accordionfaq .accordion-button,   #accordionfaq .accordion-button:not(.collapsed) {
     background: var(--purewhite);
   } */
-  #accordionfaq .accordion-button:hover {
-    background: url('../images/icon-angle-right-white.png') no-repeat 16px  center var(--colorbrown);
-    color: var(--purewhite);
-  }
-  #accordionfaq .accordion-button:not(.collapsed) { 
-    background: url('../images/icon-angle-right-white.png') no-repeat 16px  center var(--colorbrown);
-    color: var(--purewhite);
-    box-shadow: none;
-  }
-  #accordionfaq .accordion-button::after {
-    background: url('../images/icon-plus-black.png') no-repeat;
-    width: 22px;
-    height: 22px;
-  }
-  #accordionfaq .accordion-button:not(.collapsed)::after {
-    background: url('../images/icon-minus-white.png') no-repeat;
-    width: 24px;
-    height: 24px;
-  }
-  #accordionfaq .accordion-collapse {
-    background: var(--colorbrown);
-    color: var(--purewhite);
-    box-shadow: none;
-  }
-  #accordionfaq .accordion-item {
-    border-radius: 12px;
-    border: none;
-    overflow: hidden;
-  }
+#accordionfaq .accordion-button:hover {
+  background: url("../images/icon-angle-right-white.png") no-repeat 16px center
+    var(--colorbrown);
+  color: var(--purewhite);
+}
+#accordionfaq .accordion-button:not(.collapsed) {
+  background: url("../images/icon-angle-right-white.png") no-repeat 16px center
+    var(--colorbrown);
+  color: var(--purewhite);
+  box-shadow: none;
+}
+#accordionfaq .accordion-button::after {
+  background: url("../images/icon-plus-black.png") no-repeat;
+  width: 22px;
+  height: 22px;
+}
+#accordionfaq .accordion-button:not(.collapsed)::after {
+  background: url("../images/icon-minus-white.png") no-repeat;
+  width: 24px;
+  height: 24px;
+}
+#accordionfaq .accordion-collapse {
+  background: var(--colorbrown);
+  color: var(--purewhite);
+  box-shadow: none;
+}
+#accordionfaq .accordion-item,
+#championfaq .accordion-item {
+  border-radius: 12px;
+  border: none;
+  overflow: hidden;
+}
+/* Champion Accordion */
+
+#championfaq .accordion-button:not(.collapsed) {
+  background: var(--purewhite);
+  box-shadow: none;
+}
+#championfaq .accordion-button {
+  font-size: 24px;
+  font-weight: 600;
+}
+#championfaq .accordion-button::after {
+  content: '\2b';
+  font-family:"FontAwesome";
+  background: none;
+}
+#championfaq .accordion-button:not(.collapsed)::after {
+  content: '\f068';
+  font-family:"FontAwesome";
+  background: none;
+}
 /* Footer */
 footer {
   background: var(--blackcolor);
