--- a/css/layout.css
+++ b/css/layout.css
@@ -62,6 +62,10 @@ h3 {
   font-size: 32px;
   font-weight: 500;
 }
+h4 {
+  font-size: 24px;
+  font-weight: 500;
+}
 /* General css */
 .section-padding {
   padding: var(--sectionpadding) 0;
@@ -819,14 +823,28 @@ a.btn-bgcolor-primary:hover {
   font-weight: 600;
 }
 #championfaq .accordion-button::after {
-  content: '\2b';
-  font-family:"FontAwesome";
+  content: "\2b";
+  font-family: "FontAwesome";
   background: none;
 }
 #championfaq .accordion-button:not(.collapsed)::after {
-  content: '\f068';
-  font-family:"FontAwesome";
+  content: "\f068";
+  font-family: "FontAwesome";
   background: none;
+}
+/* Location details */
+.location-content > li i {
+  background: var(--primarycolor);
+  color: var(--purewhite);
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 25px;
+  text-align: center;
+}
+.location-content > li p {
+  margin-bottom: 0;
 }
 /* Footer */
 footer {
