--- a/css/responsive.css
+++ b/css/responsive.css
@@ -96,8 +96,14 @@
     width: 50%;
   }
 
-  .journey-content {
+  .journey-content, .content-champion {
     padding:30px 0 0 15px !important;
+  }
+  .gap-xs-3 {
+    gap: 1rem !important;
+  }
+  .championfaq-title {
+    margin-top: 30px;
   }
   .btm-footer {
     padding-bottom: 100px;
