--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,6 +80,10 @@
     justify-content: flex-start;
     margin-bottom: 30px;
   }
+  .blog-container > .container {
+    padding: 0;
+    margin-top: 30px;
+  }
   .section-pricing .row.d-grid,
   .pricing-list ul.d-grid {
     grid-template-columns: 1fr;
